--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,21 +99,96 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 86%; 
+  width: 40%; 
   margin: 0 auto;
+}
+
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
  
 /*=================================
   main styling starts here
 =================================*/
+.heading {
+  padding: 35px 0;
+  color: #404c56;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+}
 
+.form-container {
+  display: flex;
+  justify-content: space-between;
+}
 
+.movie-input {
+  width: 100%;
+  padding: 10px 3%;
+  border: 1px solid #b5b2b2;
+  font-size: 20px;
+  outline: none;
+}
 
+.error {
+  font-size: 14px;
+  visibility: hidden;
+}
 
+.error.fail {
+  color: #f30a0a;
+  visibility: visible;
+}
 
+.movie-input.fail { border-color: #f30a0a; }
 
+.search-btn {
+  width: 100%;
+  padding: 7px 8%;
+  border: 1px solid #b5b2b2;
+  border-radius: 3px;
+  background: #fff;
+  color: #1c1c1c;
+  font-size: 25px;
+  transition: all .3s ease-in-out;
+}
 
+.search-btn:hover { 
+  border: 1px solid transparent;
+  background-color: #1c1c1c;
+  color: #fff;
+}
 
+.input-container { flex: 0 0 70%; }
+.input-control { flex-basis: 25%; }
+
+.data-list {
+  display: flex;
+  align-items: center;
+}
+
+.sub-heading {
+  padding: 40px 0;
+  color: #404c56;
+  font-size: 25px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.data-item {
+  padding: 10px 2%;
+  border: 1px solid #b5b2b2;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  flex-basis:28.6%;
+  justify-content: center;
+}
+
+.data-item:nth-child(1) { flex-basis: 14%; }
 /*=================================
   main styling ends here
 =================================*/
