--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 40%; 
+  width: 77%; 
   margin: 0 auto;
 }
 
@@ -134,7 +134,7 @@ li {
 }
 
 .error {
-  font-size: 14px;
+  font-size: 16px;
   visibility: hidden;
 }
 
@@ -147,27 +147,22 @@ li {
 
 .search-btn {
   width: 100%;
-  padding: 7px 8%;
-  border: 1px solid #b5b2b2;
+  padding: 8px 8%;
+  border: none;
   border-radius: 3px;
-  background: #fff;
-  color: #1c1c1c;
+  background: #0db8e1;
+  color: #fff;
   font-size: 25px;
   transition: all .3s ease-in-out;
 }
 
-.search-btn:hover { 
-  border: 1px solid transparent;
-  background-color: #1c1c1c;
-  color: #fff;
-}
-
-.input-container { flex: 0 0 70%; }
-.input-control { flex-basis: 25%; }
+.input-container { flex: 0 0 75%; }
+.input-control { flex-basis: 20%; }
 
 .data-list {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .sub-heading {
@@ -178,17 +173,27 @@ li {
   text-align: center;
 }
 
-.data-item {
-  padding: 10px 2%;
-  border: 1px solid #b5b2b2;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  flex-basis:28.6%;
+
+
+.movie-item {
+  border: 1px solid #0db8e1;
+  background: #0db8e1;
+  margin: 20px 0%;
+  flex-basis: 30%;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.data-item{
+  font-size: 25px;
+  color: #fff;
+  padding: 10px 0;
   justify-content: center;
 }
 
-.data-item:nth-child(1) { flex-basis: 14%; }
+.movie-data {
+  padding: 40px 5%;
+}
 /*=================================
   main styling ends here
 =================================*/
@@ -196,7 +201,23 @@ li {
 /*media query starts*/
 /*media query for 995px starts here*/
 @media only screen and (max-width: 995px) {
+  .wrapper {
+    width: 95%;
+  }
 
+}
 
+@media only screen and (max-width: 768px) {
+  .wrapper { width: 75%;}
+  .data-list { flex-direction: column; }
+  .movie-data { flex-direction: column;}
 
-}  
+}
+
+@media only screen and (max-width: 481px) {
+  .wrapper { width: 80%;}
+  .input-container { flex: 0 0 60%; }
+  .input-control { flex-basis: 33%;  }
+  .search-btn { font-size: 23px; }
+  .movie-input { font-size: 18px };
+}
